# dico-topo-app

./: README.md  config.py  dev.env  flask_app.py  local.env  prod.env  pyproject.toml  requirements.txt  staging.env  test.env
app/: __init__.py  cli.py
app/api/: capabilities.py  route_registrar.py  search.py
app/api/place_description/: facade.py
db/utils/: bibl_gallica.tsv  pilot.py
dico_topo/: config.py  flask_app.py  manage.py  migrate.py  test_app.py
dico_topo/app/: __init__.py  cli.py  models.py
dico_topo/app/api/: abstract_facade.py  capabilities.py  decorators.py  facade_manager.py  route_registrar.py  routes.py  search.py
dico_topo/app/api/bibl/: facade.py  routes.py
dico_topo/app/api/citable_content/: facade.py
dico_topo/app/api/insee_commune/: facade.py  routes.py
dico_topo/app/api/insee_ref/: facade.py  routes.py
dico_topo/app/api/place/: facade.py  routes.py
dico_topo/app/api/place/decorators/exports/: linkedplaces.py
dico_topo/app/api/place_comment/: facade.py  routes.py
dico_topo/app/api/place_description/: facade.py  routes.py
dico_topo/app/api/place_feature_type/: facade.py  routes.py
dico_topo/app/api/place_old_label/: facade.py  routes.py
dico_topo/app/api/responsibility/: facade.py  routes.py
dico_topo/app/api/user/: facade.py  routes.py
dico_topo/db/utils/: communes-linking.py  db_manual_check.md
dico_topo/elasticsearch/: _settings.conf.json
elasticsearch/: _settings.conf.json  places.conf.json
tests/api/: test_sort_places.py
